tests/transpiler/x/clj/list_assign.clj
;; Generated by Mochi transpiler on 2025-07-19T06:44:44Z
(ns main)
(def nums [1 2])
(defn -main [] (set! nums 3) (println (nth nums 1)))
(-main)
